--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -7,6 +7,7 @@
     "busboy": "~0.0.12",
     "express": "~3.4.5",
     "mysql": "~2.0.0-alpha9",
+    "async": "~0.2.9"
   },
   "devDependencies": {},
   "scripts": {
